kubernetes-ingress-hands-on/exercises/03-path-based-routing/exercise/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-routing
  namespace: ingress-lab
spec:
  ingressClassName: nginx
  rules:
    - host: routes.ingress.local
      http:
        paths:
          - path: ________
            pathType: Prefix
            backend:
              service:
                name: quote-api
                port:
                  number: 80
          - path: ________
            pathType: Prefix
            backend:
              service:
                name: quiz-api
                port:
                  number: 80
